force-app/main/default/objects/FlowVariable__mdt/FlowVariable__mdt.object-meta.xml
<CustomObject>
    <description>Variables for constructing the input of a flow and the outputs for testing</description>
    <label>FlowVariable</label>
    <pluralLabel>FlowVariables</pluralLabel>
</CustomObject>