force-app/main/default/objects/FlowVariable__mdt/fields/FlowTest__c.field-meta.xml
<CustomField>
    <fullName>FlowTest__c</fullName>
    <description>Parent Flow</description>
    <label>FlowTest</label>
    <referenceTo>FlowTest__mdt</referenceTo>
    <relationshipLabel>FlowVariables</relationshipLabel>
    <relationshipName>FlowVariables</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>