force-app/main/default/objects/FlowVariable__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>whether this flow variable should go to the input map or the output map</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Input Variable</fullName>
                <default>true</default>
                <label>Input Variable</label>
            </value>
            <value>
                <fullName>Output Variable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>