force-app/main/default/objects/FlowVariable__mdt/fields/value__c.field-meta.xml
<CustomField>
    <fullName>value__c</fullName>
    <description>Value for the flow variable</description>
    <label>value</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>